--- a/bibliografia/b.bib
+++ b/bibliografia/b.bib
@@ -16,9 +16,47 @@
   url={http://www.revistatae.com.br/internas.asp?id=4574&link=noticias},
 }
 
+@article{milho,
+  title={Efeito da granulometria do milho e do farelo de soja sobre o desempenho de codornas japonesas},
+  author={Leandro, Nadja Susana Mogyca and Stringhini, Jos{\'e} Henrique and Caf{\'e}, Marcos Barcellos and Orsine, Geisa Fleury and Rocha, Andr{\'e}a Cruvinel},
+  journal={Revista Brasileira de Zootecnia},
+  volume={30},
+  number={4},
+  pages={1266--1271},
+  year={2001},
+}
+
+@article{guarienti1993qualidade,
+  title={Qualidade industrial de trigo.},
+  author={Guarienti, EM},
+  journal={Embrapa Trigo-Documentos (INFOTECA-E)},
+  year={1993},
+  publisher={Passo Fundo: EMBRAPA-CNPT, 1993.}
+}
+
+@article{MASSON1984,
+  year  = {1984},
+  month = {dec},
+  publisher = {Universidade Federal do Parana},
+  volume = {2},
+  number = {2},
+  author = {Masson, MARIA LUCIA and CARLOS RICARDO SOCOOL and ELOISE VASS{\~{A}}O and ITAMIR VENTURA and LUNA ID{\'{A}}LIA PINHEIRO and JORGE GRUHN SCHULZ and MARA ELI DE MATOS and PAULO S. G. FONTOURA},
+  title = {TECNOLOGIA DO CAF{\'E} {(I)}},
+  journal = {Boletim do Centro de Pesquisa de Processamento de Alimentos}
+}
+
+@article{alessi2009caracterizaccao,
+  title={Caracteriza{\c{c}}{\~a}o do processamento da farinha de milho biju para o aproveitamento dos subprodutos},
+  author={Alessi, Mauro Osni and Raupp, Dorivaldo da Silva and Gardingo, Jos{\'e} Raulindo},
+  journal={Ci{\^e}ncias Exatas e da Terra, Ci{\^e}ncias Agr{\'a}rias e Engenharias},
+  volume={9},
+  number={2},
+  year={2009}
+}
+
 @book{Dias2008,
   title={A utiliza{\c{c}}\~ao dos filtros na ind\'ustria de metais},
-  author={Dias, T.},
+  author={},
   year={2008},
   address={S\~ao Paulo},
   publisher={Revista Meio Filtrante},
