--- a/capitulos/descricao.tex
+++ b/capitulos/descricao.tex
@@ -4,7 +4,7 @@
 
 \begin{table}[H]
 \centering
-\caption{Materiais utilizados no projeto}
+\caption{Materiais utilizados no projeto.}
 \label{tab:materiais}
 \begin{tabular}{lc}
 \textbf{Materiais}         & \multicolumn{1}{l}{\textbf{Custos (R\$)}} \\ \toprule
@@ -39,6 +39,18 @@ as placas de madeira. Uma mangueira foi conectada ao furo central da placa de
 madeira, por onde seria feita a alimentação. Foi utilizada uma garrafa PET para
 colocar a solução a ser filtrada.
 
+\begin{figure}
+  \begin{subfigure}[H]{0.4\textwidth}
+    \includegraphics[width=\textwidth]{figuras/montagem1.png}
+    \caption{Estrutura de madeira com os parafusos.}
+  \end{subfigure}%
+  \hfill
+  \begin{subfigure}[H]{0.4\textwidth}
+    \includegraphics[width=\textwidth]{figuras/montagem2.png}
+    \caption{Estrutura prensando as latas. A magueira branca é a alimentação.}
+  \end{subfigure}%
+  \caption{Montagem}
+\end{figure}
 
 
 %%% Local Variables:
