--- a/capitulos/procedimento.tex
+++ b/capitulos/procedimento.tex
@@ -13,7 +13,7 @@ teste pouca solução chegava ao filtro e saía apenas pela primeira membrana.
 \begin{figure}[H]
   \centering
   \includegraphics[width=0.9\textwidth]{figuras/primeiro_teste.png}
-  \caption{Execução do primeiro teste\label{fig:primeiro_teste}}
+  \caption{Execução do primeiro teste.\label{fig:primeiro_teste}}
 \end{figure}
 
 
@@ -30,7 +30,7 @@ filtrada.
 \begin{figure}[H]
   \centering
   \includegraphics[width=0.9\textwidth]{figuras/segundo_teste.png}
-  \caption{Segundo teste executado\label{fig:segundo_teste}}
+  \caption{Montagem para o segundo teste.\label{fig:segundo_teste}}
 \end{figure}
 
 
@@ -49,7 +49,7 @@ ser filtrada usada era água com terra.
 \begin{figure}[H]
   \centering
   \includegraphics[width=0.9\textwidth]{figuras/terceiro_teste.png}
-  \caption{Execução do terceiro teste\label{fig:terceiro_teste}}
+  \caption{Terceiro teste.\label{fig:terceiro_teste}}
 \end{figure}
 
 
@@ -69,7 +69,7 @@ partículas retidas pelo algodão.
 \begin{figure}[H]
   \centering
   \includegraphics[width=0.9\textwidth]{figuras/quarto_teste.png}
-  \caption{Execução do quarto teste\label{fig:quarto_teste}}
+  \caption{Montagem final do quarto teste.\label{fig:quarto_teste}}
 \end{figure}
 
 
