--- a/bibliografia/b.bib
+++ b/bibliografia/b.bib
@@ -56,7 +56,7 @@
 
 @book{Dias2008,
   title={A utiliza{\c{c}}\~ao dos filtros na ind\'ustria de metais},
-  author={},
+  author={Tiago Dias},
   year={2008},
   address={S\~ao Paulo},
   publisher={Revista Meio Filtrante},
