--- a/capitulos/descricao.tex
+++ b/capitulos/descricao.tex
@@ -6,17 +6,19 @@
 \centering
 \caption{Materiais utilizados no projeto.}
 \label{tab:materiais}
-\begin{tabular}{lc}
-\textbf{Materiais}         & \multicolumn{1}{l}{\textbf{Custos (R\$)}} \\ \toprule
-Algodão                    &      14,00 pacote                   \\
-Bomba de ar para bicicleta &      19,00 cada                     \\
-Garrafa PET                & -                                   \\
-Graxa                      &       7,00 cada                     \\
-Latas redondas             & -                                   \\
-Mangueira                  &       4,00 cada                     \\
-Parafuso de rosca sem fim  &       2,00 metro                    \\
-Placas de madeira          & -                                   \\
-  Porcas                   &       8,00 pacote                   \\ \bottomrule
+\begin{tabular}{lrr}
+\multicolumn{1}{l}{\textbf{Materiais}} & \multicolumn{1}{l}{\textbf{Quantidade}} & \multicolumn{1}{l}{\textbf{Custos (R\$)}} \\\toprule
+Algodão                   & 5 pacotes   & 14,00 pacote \\
+Arruelas                  & 12 unidades & ??? unidade  \\
+Barras de metal           & 2 unidades  & -            \\
+Cola para canos           & 1 frasco    & ??? frasco   \\
+Garrafa PET               & 1 unidade   & -            \\
+Graxa                     & 6 latas     & 7,00 lata    \\
+Mangueira                 & 2 unidades  & ???          \\
+Parafuso de rosca sem fim & 2 metros    & ??? metro    \\
+Placas de madeira         & 2 unidades  & -            \\
+Porcas                    & 12 unidades & ??? unidade  \\
+Silicone                  & 1 frasco    & ??? frasco   \\ \bottomrule
 \end{tabular}
 \end{table}
 
