--- a/capitulos/introducao.tex
+++ b/capitulos/introducao.tex
@@ -20,7 +20,7 @@ retornam ao filtro. Durante a filtração, características como altura,
 permeabilidade e porosidade da torta, variam, também há variação de pressão ao
 longo do processo, alterando a vazão. As variáveis devem ser controladas para
 cálculo da velocidade da filtração e consequentemente o tempo gasto, sempre
-buscando otimizar o processo \citeayp{isenmann2012operaccoes} .
+buscando otimizar o processo \citeayp{isenmann2012operaccoes}.
 
 \subsection{Tipos de filtro}
 
@@ -33,7 +33,7 @@ buscando otimizar o processo \citeayp{isenmann2012operaccoes} .
   São filtros que funcionam em batelada, ou de forma contínua, operam
   pressurizados e costumam ter uma ou mais camadas de material granular. São
   usados geralmente em estações de tratamento de água. O filtro prensa é deste
-  tipo, tem como vantagens a necessidade de uma menor área para sua implantação,
+  tipo, tem como vantagens a necessidade de uma menor área para sua implantação.
   São produzidos líquidos límpidos por meio da circulação do filtrado, as tortas
   resultantes apresentam baixa umidade e pode ser automatizado. Porém, tem as
   desvantagens de difícil lavagem e manutenção, as placas podem sofrer fissuras
