--- a/capitulos/resultados.tex
+++ b/capitulos/resultados.tex
@@ -11,12 +11,7 @@ aparentemente.
 
 Os procedimentos realizados seguem descritos abaixo.
 
-De forma simplista foram realizados três testes preliminares com solução de água
-e partículas sem granulometria conhecida para verificar a funcionalidade e
-vedação do sistema construído.
-
-
-\section{Primeiro teste}
+\section{Primeiro procedimento}
 \label{sec:proc1}
 
 \textbf{Contaminante:} partículas aleatórias de terra.
@@ -42,7 +37,7 @@ A solução filtrada obtida continha pequenas partículas e apresentava coloraç
 marrom clara.
 
 
-\section{Segundo teste}
+\section{Segundo procedimento}
 \label{sec:proc2}
 
 \textbf{Contaminante:} mistura contendo as partículas apresentadas na Tabela
@@ -57,28 +52,29 @@ marrom clara.
 
 \begin{table}[H]
 \centering
-\caption{Granulometria das partículas utilizadas no segundo teste. Dados
+\caption{Granulometria das partículas utilizadas no segundo procedimento. Dados
   retirados de \citeay{alessi2009caracterizaccao},
   \citeay{guarienti1993qualidade}, \citeay{milho} e \citeay{MASSON1984}.}
 \label{granulometria2}
 \begin{tabular}{@{}lr@{}}
 \toprule
 \multicolumn{1}{c}{\textbf{Partícula}} & \multicolumn{1}{c}{\textbf{Diâmetro aproximado (\si{mm})}} \\ \midrule
-Farinha de milho                       & 0,34                                                 \\
-Canjica de milho                       & 1,18                                                 \\
-Pó de café                             & 0,59                                                 \\
-Trigo                                  & 1,05                                                 \\  \bottomrule
+Canjiquinha      & 1,18 \\
+Fubá             & 0,34 \\
+Pó de café       & 0,59 \\
+Trigo para quibe & 1,05 \\  \bottomrule
 \end{tabular}
 \end{table}
 
-Por conter partículas que não se dissolveram adequadamente e que possuem
-granulometria superiores a 1 \si{mm} como a canjica de milho e o trigo, houve
-aglomeraração nos tubos de alimentação do filtro, formando tortas.
+Por conter partículas que não se dissolveram adequadamente devido a seus grandes
+diâmetros como a canjiquinha e o trigo para quibe, houve aglomeraração nos tubos
+de alimentação do filtro, formando tortas.
 
 A formação de tortas na entrada do filtro propiciou uma pré filtração das
 partículas menores, gerando uma maior eficiência do filtro, como pode-se
-observar na Figura \ref{fig:proc2}, onde todas as membranas do filtro contribuíram para a
-filtração, produzindo um produto com menor teor de partículas.
+observar na Figura \ref{fig:proc2}, onde todas as membranas do filtro
+contribuíram para a filtração, produzindo um produto com menor teor de
+partículas.
 
 \begin{figure}[H]
   \centering
@@ -91,10 +87,10 @@ A solução final obtida após o processo apresentou-se límpida, transparente e
 partículas aparentes.
 
 
-\section{Terceiro teste}
+\section{Terceiro procedimento}
 \label{sec:proc3}
 
-\textbf{Contaminante:} mistura contendo pó de café e farinha de milho. O
+\textbf{Contaminante:} mistura contendo pó de café e fubá. O
 diâmetro aproximado dessas partículas pode ser observado na Tabela
 \ref{granulometria2}.
 
@@ -107,7 +103,7 @@ com tanta eficiência.
 
 Foi possível observar uma maior retenção de partículas de pó de café nas
 primeiras membranas do filtro, concentradas em seu centro. Não foi visível as
-partículas de farinha de milho nas membranas neste procedimento.
+partículas de fubá nas membranas neste procedimento.
 
 A solução obtida após a realização do procedimento apresentou resquícios de
 partículas e coloração amarelada. Portanto, a não formação de torta prejudicou a
@@ -117,12 +113,12 @@ serem tão eficientes para a filtração de partículas com menores diâmetros.
 
 % \begin{table}[H]
 % \centering
-% \caption{Granulometria das partículas utilizadas no terceiro teste.}
+% \caption{Granulometria das partículas utilizadas no terceiro procedimento.}
 % \label{granulometria3}
 % \begin{tabular}{@{}lr@{}}
 % \toprule
 % \multicolumn{1}{c}{\textbf{Partícula}} & \multicolumn{1}{c}{\textbf{Diâmetro aproximado (\si{mm})}} \\ \midrule
-% Farinha de milho                       & 0,34                                                 \\
+% fubá                       & 0,34                                                 \\
 % Pó de café                       & 0,59                                                 \\ \bottomrule
 % \end{tabular}
 % \end{table}
