--- a/capitulos/descricao.tex
+++ b/capitulos/descricao.tex
@@ -35,11 +35,11 @@ filtrante (algodão).
 
 Foram conectadas as duas placas por meio dos parafusos de rosca sem fim, de modo
 a deixar um espaço para colocar as membranas filtrantes. As latas foram
-preenchidas com algodão e tampadas, empilhando e encaixando-as entre as duas
-placas de madeira, de modo que as membranas filtrantes ficaram prensadas entre
-as placas de madeira. Uma mangueira foi conectada ao furo central da placa de
-madeira, por onde seria feita a alimentação. Foi utilizada uma garrafa PET para
-colocar a solução a ser filtrada.
+preenchidas com algodão e tampadas, em seguida, foram empilhadas e acopladas
+entre as duas placas de madeira, de modo que as membranas filtrantes ficaram
+prensadas entre as placas de madeira. Uma mangueira foi conectada ao furo
+central da placa de madeira, por onde seria feita a alimentação. Foi utilizada
+uma garrafa PET para colocar a solução a ser filtrada.
 
 \begin{figure}
   \begin{subfigure}[H]{0.4\textwidth}
