--- a/capitulos/procedimento.tex
+++ b/capitulos/procedimento.tex
@@ -4,9 +4,9 @@
 
 No primeiro teste, a mangueira utilizada para conectar a garrafa PET e o filtro
 prensa, não permitia escoamento de toda a solução, por possuir em sua
-extremidade um conector que servia como filtro e não permitia a entrada das
-partículas da solução. Foi retirado o conector, porém a conexão entre a
-mangueira e a garrafa não estava totalmente vedada e não havia pressão
+extremidade um conector que obstruia a extremidade da mangueira, não permitindo
+a entrada das partículas em suspensão. Foi retirado o conector, porém a conexão
+entre a mangueira e a garrafa não estava totalmente vedada e não havia pressão
 suficiente para que a solução entrasse na mangueira e chegasse ao filtro. Neste
 teste pouca solução chegava ao filtro e saía apenas pela primeira membrana.
 
@@ -21,10 +21,10 @@ teste pouca solução chegava ao filtro e saía apenas pela primeira membrana.
 
 Neste teste, utilizou-se outra garrafa, com intenção de promover mais pressão ao
 sistema através da compressão da mesma. A solução foi para o filtro sem vazão
-constante, pressão suficiente, e ainda havia vazamento na entrada do filtro. O
-filtrado estava saindo em grande parte antes da primeira membrana (entre a placa
-de madeira e a primeira membrana filtrante) e também antes da madeira. Logo, a
-solução não estava passando nas membranas filtrantes e não estava sendo
+constante, sem pressão suficiente, e ainda havia vazamento na entrada do filtro.
+O filtrado estava saindo em grande parte antes da primeira membrana (entre a
+placa de madeira e a primeira membrana filtrante) e também antes da madeira.
+Logo, a solução não estava passando nas membranas filtrantes e não estava sendo
 filtrada.
 
 \begin{figure}[H]
@@ -36,15 +36,15 @@ filtrada.
 
 \section{Terceiro teste}\label{sec:terceiro_teste}
 
-Foi trocada a mangueira do primeiro teste, por uma de maior diâmetro externo e
-menor diâmetro interno, promovendo melhor encaixe do bico da garrafa na
-mangueira, reduzindo as possibilidades de vazamento. Para resolver o problema do
-teste anterior, a tampa da primeira membrana filtrante foi colada a placa de
-madeira e vedada, junto à mangueira com silicone, de modo a vedar a saída de
-solução entre a placa e a primeira membrana. Feito o teste, a solução suja
-passou sair filtrada por todas as membranas, mas a pressão de saída da solução
-na garrafa PET ainda foi um problema. Nesse teste e nos anteriores, a solução a
-ser filtrada usada era água com terra.
+Foi trocada a mangueira do primeiro teste por uma de menor diâmetro externo e
+com paredes mais finas, possibilitando ser introduzida dentro do adaptador e
+alcançando a primeira lata, reduzindo então as possibilidades de vazamento. Para
+resolver o problema do teste anterior, a tampa da primeira membrana filtrante
+foi colada a placa de madeira e vedada, junto à mangueira com silicone, de modo
+a evitar a saída de solução entre a placa e a primeira membrana. Feito o teste,
+a solução que entrava suja passou sair mais limpa por as membranas, mas a
+pressão de saída da solução na garrafa PET ainda foi um problema. Nesse teste e
+nos anteriores, a solução a ser filtrada usada era água com terra.
 
 \begin{figure}[H]
   \centering
@@ -75,10 +75,10 @@ partículas retidas pelo algodão.
 
 \section{Quinto teste}\label{sec:quinto_teste}
 
-Ainda foi feito um último teste para variar-se a solução. A mistura de água,
-café e fubá passou pelo filtro mas não teve filtração tão efetiva quanto aquela
-que havia trigo e canjiquinha, já que são partículas maiores e não se dissolvem
-na água como café e fubá. Para isso, foi proposto que as partículas maiores se
+Ainda foi feito um último teste para variar-se a solução. A mistura de água, pó
+de café e fubá passou pelo filtro mas não teve filtração tão efetiva quanto
+aquela em que havia trigo para quibe e canjiquinha, já que estas são partículas
+maiores. Por isso, foi proposto que no teste anterior, as partículas maiores se
 uniram na mangueira e formaram um meio filtrante, fazendo com que a solução
 entrasse já pré-filtrada no sistema.
 
