--- a/capitulos/resultados.tex
+++ b/capitulos/resultados.tex
@@ -102,13 +102,14 @@ pequena dimensão das partículas as membranas filtrantes não conseguiram retê
 com tanta eficiência.
 
 Foi possível observar uma maior retenção de partículas de pó de café nas
-primeiras membranas do filtro, concentradas em seu centro. Não foi visível as
-partículas de fubá nas membranas neste procedimento.
+primeiras membranas do filtro, concentradas em seu centro. Neste procedimento,
+as partículas de fubá não ficaram visíveis nas membranas.
 
 A solução obtida após a realização do procedimento apresentou resquícios de
-partículas e coloração amarelada. Portanto, a não formação de torta prejudicou a
-filtração do sistema, devido às membrana filtrantes utilizadas (algodões), não
-serem tão eficientes para a filtração de partículas com menores diâmetros.
+partículas e coloração amarelada. Portanto, pode-se dizer que a formação de
+torta no procedimento anterior favoreceu a filtração do sistema e, sem a
+formação de torta, percebe-se que as membranas filtrantes (algodões) não são tão
+eficientes para a retenção de partículas de menores diâmetros.
 
 
 % \begin{table}[H]
