--- a/capitulos/descricao.tex
+++ b/capitulos/descricao.tex
@@ -8,17 +8,16 @@
 \label{tab:materiais}
 \begin{tabular}{lrr}
 \multicolumn{1}{l}{\textbf{Materiais}} & \multicolumn{1}{l}{\textbf{Quantidade}} & \multicolumn{1}{l}{\textbf{Custos (R\$)}} \\\toprule
-Algodão                   & 5 pacotes   & 14,00 pacote \\
-Arruelas                  & 12 unidades & ??? unidade  \\
+Algodão                   & 3 pacotes   & 4,00 pacote  \\
+Arruelas                  & 12 unidades & 0,50 unidade \\
 Barras de metal           & 2 unidades  & -            \\
-Cola para canos           & 1 frasco    & ??? frasco   \\
 Garrafa PET               & 1 unidade   & -            \\
 Graxa                     & 6 latas     & 7,00 lata    \\
-Mangueira                 & 2 unidades  & ???          \\
-Parafuso de rosca sem fim & 2 metros    & ??? metro    \\
+Mangueira                 & 1 metro     & 4,00 metro   \\
+Parafuso de rosca sem fim & 2 metros    & 2,00 metro   \\
 Placas de madeira         & 2 unidades  & -            \\
-Porcas                    & 12 unidades & ??? unidade  \\
-Silicone                  & 1 frasco    & ??? frasco   \\ \bottomrule
+Porcas                    & 12 unidades & 0,50 unidade \\
+Silicone                  & 1 frasco    & 14,00 frasco \\ \bottomrule
 \end{tabular}
 \end{table}
 
@@ -26,9 +25,9 @@ Silicone                  & 1 frasco    & ??? frasco   \\ \bottomrule
 \label{sec:montagem}
 
 Primeiramente, foram realizados quatro furos nos cantos das placas de madeira,
-que é onde os parafusos seriam acoplados para unir o sistema. Em uma das placas
-de madeira, foi feito um furo central de \nicefrac{1}{4} \si{in}, para encaixe
-da mangueira de alimentação do filtro. Na montagem da membrana filtrante (latas
+onde os parafusos seriam acoplados para unir o sistema. Em uma das placas de
+madeira, foi feito um furo central de \nicefrac{1}{4} \si{in}, para encaixe da
+mangueira de alimentação do filtro. Na montagem da membrana filtrante (latas
 preenchidas com algodão), foram feitos furos de \nicefrac{1}{4} \si{in} no
 centro de cada lata, por onde a solução a ser filtrada entraria no meio
 filtrante (algodão).
