--- a/capitulos/introducao.tex
+++ b/capitulos/introducao.tex
@@ -17,10 +17,10 @@ clarificado) e a torta de filtragem (sólido com um pouco de líquido). Ao longo
 do processo, a própria torta se torna o meio filtrante, e como no início ela
 está sendo formada, para que seja efetiva a filtração, os volumes iniciais
 retornam ao filtro. Durante a filtração, características como altura,
-permeabilidade e porosidade da torta, variam, também há variação de pressão ao
-longo do processo, alterando a vazão. As variáveis devem ser controladas para
-cálculo da velocidade da filtração e consequentemente o tempo gasto, sempre
-buscando otimizar o processo \citeayp{isenmann2012operaccoes}.
+permeabilidade e porosidade da torta variam, também ocorrendo variação de
+pressão ao longo do processo, alterando a vazão. As variáveis devem ser
+controladas para cálculo da velocidade da filtração e consequentemente o tempo
+gasto, sempre buscando otimizar o processo \citeayp{isenmann2012operaccoes}.
 
 \subsection{Tipos de filtro}
 
@@ -235,14 +235,14 @@ primeira delas é na produção de cerveja, onde a filtração é feita para a
 separação de células de leveduras e de partículas de proteínas coaguladas em
 suspensão, que tornam a cerveja turva. Uma outra aplicação é na produção de
 refrigerantes, nesse caso os filtros prensa atuam na purificação do xarope, a
-fim de reter a impurezas presentes em suspensão. E, finalmente, os filtros
+fim de reter as impurezas presentes em suspensão. E, finalmente, os filtros
 prensa são também vistos na produção de sucos de frutas, onde são empregados na
 separação do bagaço e da polpa desses vegetais \citeayp{Novazzi2008}.
 
-Outro segmento em que é os filtros prensa são utilizados é a indústria de
-metais. Nelas, os filtros prensa aparecem principalmente quando se objetiva
-reduzir bastante o volume final de sólidos. Um exemplo é a galvanoplastia, um
-processo em que as peças passam por um banho eletrolítico para melhoria da sua
+Outro segmento onde os filtros prensa são utilizados é a indústria de metais.
+Nelas, os filtros prensa aparecem principalmente quando se objetiva reduzir
+bastante o volume final de sólidos. Um exemplo é a galvanoplastia, um processo
+em que as peças passam por um banho eletrolítico para melhoria da sua
 resistência, nesse caso, o filtro prensa é utilizado para separar a água do lodo
 galvânico, formado por resíduos gerados no processo. Já nas siderúrgicas,
 segundo Renato Merne, Gerente Industrial e Especialista em Tecnologia
