--- a/capitulos/procedimento.tex
+++ b/capitulos/procedimento.tex
@@ -40,7 +40,7 @@ Foi trocada a mangueira do primeiro teste por uma de menor diâmetro externo e
 com paredes mais finas, possibilitando ser introduzida dentro do adaptador e
 alcançando a primeira lata, reduzindo então as possibilidades de vazamento. Para
 resolver o problema do teste anterior, a tampa da primeira membrana filtrante
-foi colada a placa de madeira e vedada, junto à mangueira com silicone, de modo
+foi colada à placa de madeira e vedada, junto à mangueira com silicone, de modo
 a evitar a saída de solução entre a placa e a primeira membrana. Feito o teste,
 a solução que entrava suja passou sair mais limpa por as membranas, mas a
 pressão de saída da solução na garrafa PET ainda foi um problema. Nesse teste e
@@ -75,7 +75,7 @@ partículas retidas pelo algodão.
 
 \section{Quinto teste}\label{sec:quinto_teste}
 
-Ainda foi feito um último teste para variar-se a solução. A mistura de água, pó
+Ainda foi feito um último teste variando a solução. A mistura de água, pó
 de café e fubá passou pelo filtro mas não teve filtração tão efetiva quanto
 aquela em que havia trigo para quibe e canjiquinha, já que estas são partículas
 maiores. Por isso, foi proposto que no teste anterior, as partículas maiores se
