--- a/capitulos/resultados.tex
+++ b/capitulos/resultados.tex
@@ -14,13 +14,13 @@ Os procedimentos realizados seguem descritos abaixo.
 \section{Primeiro procedimento}
 \label{sec:proc1}
 
-\textbf{Contaminante:} partículas aleatórias de terra.
+\textbf{Partículas indesejadas:} partículas aleatórias de terra.
 
 \textbf{Solvente:} água.
 
-De forma simplista, foram realizados três testes preliminares com solução
-contendo o contaminante sem granulometria conhecida,a fim de verificar
-a funcionalidade do sistema construído, tal como sua vedação.
+De forma simplista, foram realizados três testes preliminares com solução de
+água e partículas sem granulometria conhecida, a fim de verificar a
+funcionalidade do sistema construído, tal como sua vedação.
 
 Os testes mostraram pontos de vazamentos na estrutura de madeira e também
 pressão insuficiente na alimentação, que não permitia que a solução atingisse
@@ -40,7 +40,7 @@ marrom clara.
 \section{Segundo procedimento}
 \label{sec:proc2}
 
-\textbf{Contaminante:} mistura contendo as partículas apresentadas na Tabela
+\textbf{Partículas indesejadas:} mistura contendo as partículas apresentadas na Tabela
 \ref{granulometria2}.
 
 \textbf{Solvente:} água.
@@ -90,7 +90,7 @@ partículas aparentes.
 \section{Terceiro procedimento}
 \label{sec:proc3}
 
-\textbf{Contaminante:} mistura contendo pó de café e fubá. O
+\textbf{Partículas indesejadas:} mistura contendo pó de café e fubá. O
 diâmetro aproximado dessas partículas pode ser observado na Tabela
 \ref{granulometria2}.
 
