--- a/capitulos/procedimento.tex
+++ b/capitulos/procedimento.tex
@@ -36,15 +36,14 @@ filtrada.
 
 \section{Terceiro teste}\label{sec:terceiro_teste}
 
-Foi trocada a mangueira do primeiro teste por uma de menor diâmetro externo e
-com paredes mais finas, possibilitando ser introduzida dentro do adaptador e
-alcançando a primeira lata, reduzindo então as possibilidades de vazamento. Para
-resolver o problema do teste anterior, a tampa da primeira membrana filtrante
-foi colada à placa de madeira e vedada, junto à mangueira com silicone, de modo
-a evitar a saída de solução entre a placa e a primeira membrana. Feito o teste,
-a solução que entrava suja passou sair mais limpa por as membranas, mas a
-pressão de saída da solução na garrafa PET ainda foi um problema. Nesse teste e
-nos anteriores, a solução a ser filtrada usada era água com terra.
+Foi trocada a mangueira do primeiro teste por uma com paredes mais finas, ou
+seja, maior diâmetro hidráulico. Para resolver o problema do teste anterior, a
+tampa da primeira membrana filtrante foi colada à placa de madeira e vedada,
+junto à mangueira com silicone, de modo a evitar a saída de solução entre a
+placa e a primeira membrana. Feito o teste, a solução que entrava suja passou
+sair mais limpa por as membranas, mas a pressão de saída da solução na garrafa
+PET ainda foi um problema. Nesse teste e nos anteriores, a solução a ser
+filtrada usada era água com terra.
 
 \begin{figure}[H]
   \centering
